--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,8 +22,8 @@
                 android:id="@+id/app_bar_image"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:src="@android:drawable/sym_def_app_icon"
-                android:scaleType="centerCrop" />
+                android:scaleType="center"
+                android:src="@drawable/logo" />
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
